WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
231701
REGRESSION (
r284079
): [Debug] IPCTestingAPI.CanReceiveSharedMemory is timing out
https://bugs.webkit.org/show_bug.cgi?id=231701
Summary
REGRESSION (r284079): [Debug] IPCTestingAPI.CanReceiveSharedMemory is timing out
Ryan Haddad
Reported
2021-10-13 15:06:56 PDT
TestWebKitAPI.IPCTestingAPI.CanReceiveIPCSemaphore and TestWebKitAPI.IPCTestingAPI.CanReceiveSharedMemory are timing out on iOS and macOS debug bots after
https://trac.webkit.org/changeset/284079/webkit
https://build.webkit.org/#/builders/23/builds/4255/steps/17/logs/stdio
https://results.webkit.org/?suite=api-tests&suite=api-tests&test=TestWebKitAPI.IPCTestingAPI.CanReceiveIPCSemaphore&test=TestWebKitAPI.IPCTestingAPI.CanReceiveSharedMemory
Attachments
[fast-cq] Fixes the test
(17.09 KB, patch)
2021-10-14 16:34 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-10-13 15:07:09 PDT
<
rdar://problem/84219000
>
Wenson Hsieh
Comment 2
2021-10-13 15:07:58 PDT
***
Bug 231697
has been marked as a duplicate of this bug. ***
Wenson Hsieh
Comment 3
2021-10-14 14:11:55 PDT
Retitling, since IPCTestingAPI.CanReceiveIPCSemaphore should be fixed by
https://bugs.webkit.org/show_bug.cgi?id=231701
.
Wenson Hsieh
Comment 4
2021-10-14 16:34:00 PDT
Created
attachment 441304
[details]
[fast-cq] Fixes the test
EWS
Comment 5
2021-10-15 12:12:15 PDT
Committed
r284261
(
243069@main
): <
https://commits.webkit.org/243069@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 441304
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug